--- a/_posts/2019-08-29-day-4.md
+++ b/_posts/2019-08-29-day-4.md
@@ -6,7 +6,7 @@ date: 2019-08-29 17:17:17 +0200
 # Epidaurus
 
 <figure>
-    <iframe width="420" height="315" src="https://youtu.be/gSp_Fctg794" frameborder="0" allowfullscreen> </iframe>
+    <iframe width="475" height="310" src="https://www.youtube.com/embed/gSp_Fctg794" frameborder="0" style="display:block; margin:auto;" allowfullscreen></iframe>
 	<figcaption>
     Video of Aidyn singing in Epidaurus courtesy of Sten because my phone was low on battery at the time
 	</figcaption>
